rendered/before/mycure-preprod/nginx-gateway.yaml
---
# Source: nginx-gateway/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway-system
  labels:
    helm.sh/chart: nginx-gateway-0.1.0
    app.kubernetes.io/managed-by: Helm
---
# Source: nginx-gateway/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
  labels:
    helm.sh/chart: nginx-gateway-0.1.0
    app.kubernetes.io/managed-by: Helm
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
