rendered/before/mycure-preprod/dentalemon-myaccount.yaml
---
# Source: dentalemon-myaccount/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dentalemon-myaccount
  namespace: mycure-preprod
  labels:
    helm.sh/chart: dentalemon-myaccount-1.0.0
    app.kubernetes.io/name: dentalemon-myaccount
    app.kubernetes.io/instance: dentalemon-myaccount
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: dentalemon-myaccount
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dentalemon-myaccount
    app.kubernetes.io/instance: dentalemon-myaccount
---
# Source: dentalemon-myaccount/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dentalemon-myaccount
  namespace: mycure-preprod
  labels:
    helm.sh/chart: dentalemon-myaccount-1.0.0
    app.kubernetes.io/name: dentalemon-myaccount
    app.kubernetes.io/instance: dentalemon-myaccount
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: dentalemon-myaccount
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dentalemon-myaccount
      app.kubernetes.io/instance: dentalemon-myaccount
  template:
    metadata:
      annotations:
        checksum/config: cc8e631493422e416560012ade448b891e8793a9f929c5386a977ce3d4c2f734
      labels:
        app.kubernetes.io/name: dentalemon-myaccount
        app.kubernetes.io/instance: dentalemon-myaccount
    spec:
      serviceAccountName: dentalemon-myaccount
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: dentalemon-myaccount
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
        image: "ghcr.io/mycurelabs/dentalemon-myaccount:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: caddy-data
          mountPath: /data
        - name: caddy-config
          mountPath: /config
      volumes:
      - name: tmp
        emptyDir: {}
      - name: caddy-data
        emptyDir: {}
      - name: caddy-config
        emptyDir: {}
      nodeSelector:
        node-pool: staging
      tolerations:
        - key: "node-pool"
          operator: "Equal"
          value: "staging"
          effect: "NoSchedule"
---
# Source: dentalemon-myaccount/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dentalemon-myaccount
  namespace: mycure-preprod
  labels:
    helm.sh/chart: dentalemon-myaccount-1.0.0
    app.kubernetes.io/name: dentalemon-myaccount
    app.kubernetes.io/instance: dentalemon-myaccount
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: dentalemon-myaccount
spec:
  parentRefs:
    - name: nginx-shared-gateway
      namespace: nginx-gateway-system
      sectionName: https  # Default: attach to HTTPS listener
  hostnames:
    - dentalemon-myaccount.preprod.localfirsthealth.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dentalemon-myaccount
          port: 80
          weight: 1
