rendered/before/mycure-preprod/dentalemon-website.yaml
---
# Source: dentalemon-website/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dentalemon-website
  namespace: mycure-preprod
  labels:
    helm.sh/chart: dentalemon-website-1.0.0
    app.kubernetes.io/name: dentalemon-website
    app.kubernetes.io/instance: dentalemon-website
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: dentalemon-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dentalemon-website
    app.kubernetes.io/instance: dentalemon-website
---
# Source: dentalemon-website/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dentalemon-website
  namespace: mycure-preprod
  labels:
    helm.sh/chart: dentalemon-website-1.0.0
    app.kubernetes.io/name: dentalemon-website
    app.kubernetes.io/instance: dentalemon-website
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: dentalemon-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dentalemon-website
      app.kubernetes.io/instance: dentalemon-website
  template:
    metadata:
      annotations:
        checksum/config: 8764ab49d71e664cbeb93c3a1c5f79fc8c68d4d00de6095ece79faa5a064545b
      labels:
        app.kubernetes.io/name: dentalemon-website
        app.kubernetes.io/instance: dentalemon-website
    spec:
      serviceAccountName: dentalemon-website
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: dentalemon-website
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
        image: "ghcr.io/mycurelabs/dentalemon-website:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
      nodeSelector:
        node-pool: staging
      tolerations:
        - key: "node-pool"
          operator: "Equal"
          value: "staging"
          effect: "NoSchedule"
---
# Source: dentalemon-website/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dentalemon-website
  namespace: mycure-preprod
  labels:
    helm.sh/chart: dentalemon-website-1.0.0
    app.kubernetes.io/name: dentalemon-website
    app.kubernetes.io/instance: dentalemon-website
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: dentalemon-website
spec:
  parentRefs:
    - name: nginx-shared-gateway
      namespace: nginx-gateway-system
      sectionName: https  # Default: attach to HTTPS listener
  hostnames:
    - dentalemon-website.preprod.localfirsthealth.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dentalemon-website
          port: 80
          weight: 1
