rendered/before/mycure-preprod/mycure-deploydash.yaml
---
# Source: mycure-deploydash/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycure-deploydash
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycure-deploydash-1.0.0
    app.kubernetes.io/name: mycure-deploydash
    app.kubernetes.io/instance: mycure-deploydash
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycure-deploydash
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mycure-deploydash
    app.kubernetes.io/instance: mycure-deploydash
---
# Source: mycure-deploydash/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycure-deploydash
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycure-deploydash-1.0.0
    app.kubernetes.io/name: mycure-deploydash
    app.kubernetes.io/instance: mycure-deploydash
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycure-deploydash
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mycure-deploydash
      app.kubernetes.io/instance: mycure-deploydash
  template:
    metadata:
      annotations:
        checksum/config: a7c6e009cf072a5dd7c5f848772bcc8e3b278db305746d771478875df4b166ec
      labels:
        app.kubernetes.io/name: mycure-deploydash
        app.kubernetes.io/instance: mycure-deploydash
    spec:
      serviceAccountName: mycure-deploydash
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: mycure-deploydash
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
        image: "ghcr.io/mycurelabs/deploydash:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: caddy-data
          mountPath: /data
        - name: caddy-config
          mountPath: /config
      volumes:
      - name: tmp
        emptyDir: {}
      - name: caddy-data
        emptyDir: {}
      - name: caddy-config
        emptyDir: {}
      nodeSelector:
        node-pool: staging
      tolerations:
        - key: "node-pool"
          operator: "Equal"
          value: "staging"
          effect: "NoSchedule"
---
# Source: mycure-deploydash/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mycure-deploydash
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycure-deploydash-1.0.0
    app.kubernetes.io/name: mycure-deploydash
    app.kubernetes.io/instance: mycure-deploydash
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycure-deploydash
spec:
  parentRefs:
    - name: nginx-shared-gateway
      namespace: nginx-gateway-system
      sectionName: https  # Default: attach to HTTPS listener
  hostnames:
    - mycure-deploydash.preprod.localfirsthealth.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mycure-deploydash
          port: 80
          weight: 1
