rendered/before/mycure-preprod/account.yaml
---
# Source: account/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: account
  namespace: mycure-preprod
  labels:
    helm.sh/chart: account-1.0.0
    app.kubernetes.io/name: account
    app.kubernetes.io/instance: account
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycureapp
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: account
      app.kubernetes.io/instance: account
  policyTypes:
    - Ingress
    - Egress
---
# Source: account/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
  namespace: mycure-preprod
  labels:
    helm.sh/chart: account-1.0.0
    app.kubernetes.io/name: account
    app.kubernetes.io/instance: account
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycureapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: account
    app.kubernetes.io/instance: account
---
# Source: account/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  namespace: mycure-preprod
  labels:
    helm.sh/chart: account-1.0.0
    app.kubernetes.io/name: account
    app.kubernetes.io/instance: account
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycureapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: account
      app.kubernetes.io/instance: account
  template:
    metadata:
      annotations:
        checksum/config: 5579ecc83a5099822999dfce8a76ed61813f7ccb6631867713c62ffba547742d
      labels:
        app.kubernetes.io/name: account
        app.kubernetes.io/instance: account
    spec:
      serviceAccountName: account
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: account
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
        image: "ghcr.io/monobaselabs/accountapp:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: caddy-data
          mountPath: /data
        - name: caddy-config
          mountPath: /config
      volumes:
      - name: tmp
        emptyDir: {}
      - name: caddy-data
        emptyDir: {}
      - name: caddy-config
        emptyDir: {}
      nodeSelector:
        node-pool: staging
      tolerations:
        - key: "node-pool"
          operator: "Equal"
          value: "staging"
          effect: "NoSchedule"
---
# Source: account/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: account
  namespace: mycure-preprod
  labels:
    helm.sh/chart: account-1.0.0
    app.kubernetes.io/name: account
    app.kubernetes.io/instance: account
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycureapp
spec:
  parentRefs:
    - name: nginx-shared-gateway
      namespace: nginx-gateway-system
      sectionName: https  # Only attach to HTTPS listener
  hostnames:
    - account.preprod.localfirsthealth.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: account
          port: 80
          weight: 1
