rendered/before/mycure-preprod/mycure.yaml
---
# Source: mycure/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mycure
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycure-1.0.0
    app.kubernetes.io/name: mycure
    app.kubernetes.io/instance: mycure
    app.kubernetes.io/version: "10.0.22"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycureapp
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mycure
      app.kubernetes.io/instance: mycure
  policyTypes:
    - Ingress
    - Egress
---
# Source: mycure/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycure
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycure-1.0.0
    app.kubernetes.io/name: mycure
    app.kubernetes.io/instance: mycure
    app.kubernetes.io/version: "10.0.22"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycureapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mycure
    app.kubernetes.io/instance: mycure
---
# Source: mycure/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycure
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycure-1.0.0
    app.kubernetes.io/name: mycure
    app.kubernetes.io/instance: mycure
    app.kubernetes.io/version: "10.0.22"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycureapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mycure
      app.kubernetes.io/instance: mycure
  template:
    metadata:
      annotations:
        checksum/config: 3e912ae0801a5bb71790c0a38f6ee7a99c9d0b464242e9604e026cb77302faac
      labels:
        app.kubernetes.io/name: mycure
        app.kubernetes.io/instance: mycure
    spec:
      serviceAccountName: mycure
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: mycure
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
        image: "ghcr.io/mycurelabs/mycureapp:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: caddy-data
          mountPath: /data
        - name: caddy-config
          mountPath: /config
      volumes:
      - name: tmp
        emptyDir: {}
      - name: caddy-data
        emptyDir: {}
      - name: caddy-config
        emptyDir: {}
      nodeSelector:
        node-pool: staging
      tolerations:
        - key: "node-pool"
          operator: "Equal"
          value: "staging"
          effect: "NoSchedule"
---
# Source: mycure/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mycure
  namespace: mycure-preprod
  labels:
    helm.sh/chart: mycure-1.0.0
    app.kubernetes.io/name: mycure
    app.kubernetes.io/instance: mycure
    app.kubernetes.io/version: "10.0.22"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: mycureapp
spec:
  parentRefs:
    - name: nginx-shared-gateway
      namespace: nginx-gateway-system
      sectionName: https  # Default: attach to HTTPS listener
  hostnames:
    - mycure.preprod.localfirsthealth.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mycure
          port: 80
          weight: 1
